# shared_secrets

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: .modular_integers.rs.swp  library.rs  modular_integers.rs
config/: args.yaml
src/: crypto.rs  error.rs  lib.rs  main.rs  shamir.rs
src/crypto/: error.rs  shamir.rs
src/math/: error.rs  field.rs  mod.rs  modular.rs  polynomial.rs  prime.rs  random.rs
src/shamir/: math.rs
test_data/: msg1.txt
