[package]
name = "shared_secrets"
version = "0.1.0"
authors = ["Daniel Linares Gil <daniel.linares@ciencias.unam.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aes = "0.6.0"
sha2 = "0.9.2"
rpassword = "5.0.0"

[dependencies.rug]
version = "1.11"
default-features = false
features = ["integer", "rand"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "modular_integers"
harness = false
