[package]
name = "shared_secrets"
version = "0.1.0"
authors = ["Jonás García Chavelas", "Daniel Linares Gil <daniel.linares@ciencias.unam.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
aes-gcm = "0.8.0"
sha2 = "0.9.2"
rpassword = "5.0.0"

[dependencies.rug]
version = "1.11"
default-features = false
features = ["integer", "rand"]
